Returns new sample URI in location header
